# sd-youtube-backend-mvp

./: .env.example  .gitignore  AGENTS.md  DEPLOY.md  DESIGN.md  Dockerfile  KICKOFF.md  README.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py
alembic/versions/: 001_initial.py
docs/: mvp-scope.md  system-design.md
src/youtube_topk/: __init__.py  config.py  db.py  main.py
src/youtube_topk/models/: video.py  view_event.py  window_aggregate.py
src/youtube_topk/routers/: events.py  topk.py  videos.py
src/youtube_topk/schemas/: event.py  topk.py  video.py
src/youtube_topk/services/: aggregation.py  events.py  videos.py
tests/: conftest.py  test_aggregation.py  test_event_service.py  test_video_service.py
tests/functional/: conftest.py  test_event_endpoints.py  test_topk_endpoint.py  test_video_endpoints.py
tests/unit/: test_aggregation.py  test_event_service.py  test_models.py  test_video_service.py
verify/: manifest.env
verify/acceptance/: conftest.py  test_fr1_topk_by_window.py  test_fr2_event_ingestion.py  test_fr3_video_crud.py  test_fr4_metadata.py
