[project]
name = "youtube-topk"
version = "0.1.0"
description = "YouTube Top-K Leaderboard MVP — FastAPI + PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "pydantic-settings>=2.0,<3.0",
    "alembic>=1.13,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.8,<1.0",
    "aiosqlite>=0.20,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
